# hands-on-SupCon

./: .gitignore  README.md  pyproject.toml
models/: lenet5_cifar10.pth  lenet5_siamese.pth
notebooks/: CNN_Architecture.ipynb  CNN_Architecture_Overtrained.ipynb  Embedding_Architectures_&_Similarity_Learning.ipynb  SupCon.ipynb
src/: datasets.py  losses.py  models.py  plot_data.py
